--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -2,7 +2,6 @@
     Flush        5
     Daemon       Off
     Log_Level    info
-    Parsers_File parsers.conf
 
 [INPUT]
     Name              tail
@@ -11,10 +10,31 @@
     Refresh_Interval  5
     Mem_Buf_Limit     64MB
     Skip_Long_Lines   On
+    # Use a database to remember the position in the log files.
+    # This prevents re-reading the same logs if Fluent Bit restarts.
+    DB                /logs/fluent-bit.db
+    DB.Sync           Normal
+    Docker_Mode       On
 
+# --- OUTPUT 1: Archival to a file ---
+# This block writes every log message to a persistent file.
 [OUTPUT]
-    Name  file
-    Match *
-    Path  /logs
-    File  all.log
+    Name   file
+    Match  *
+    Path   /logs
+    File   all.log
     Format plain
+
+# --- OUTPUT 2: Real-time analysis via HTTP ---
+# This block sends a copy of every log message to your analyzer service.
+[OUTPUT]
+    Name          http
+    Match         *
+    # The hostname 'analyzer' is resolved by Docker's internal DNS
+    Host          analyzer
+    Port          9880
+    URI           /logs
+    # Send each log record as a separate JSON object
+    Format        json
+    # Retry if the analyzer is temporarily unavailable
+    Retry_Limit   5
