--- a/analyzer/Dockerfile
+++ b/analyzer/Dockerfile
@@ -2,8 +2,10 @@ FROM node:20-alpine
 WORKDIR /usr/src/app
 
 # Copy the **existing** file (analyzer.js) and lockfile
-COPY analyzer.js package*.json ./
+COPY package*.json ./
 
 RUN npm install --production
+
+COPY analyzer.js ./
 
 CMD ["node", "analyzer.js"]
