--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,9 @@
 {
   "name": "demo-app",
   "version": "1.0.0",
+  "type": "module",
   "description": "Hello‑world service behind nginx",
-  "main": "index.mjs",
+  "main": "index.js",
   "scripts": {
     "start": "node index.mjs"
   },
