add docker dev to see instant file changes

--- a/analyzer/package.json
+++ b/analyzer/package.json
@@ -4,9 +4,16 @@
   "type": "module",
   "description": "Tail container logs, feed Gemma via Ollama, and post summaries to Discord.",
   "main": "analyze.js",
+  "scripts": {
+    "start": "node analyzer.js",
+    "dev": "nodemon analyzer.js"
+  },
   "dependencies": {
     "express": "^4.19.2",
     "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   },
   "license": "MIT"
 }
