--- a/app/package.json
+++ b/app/package.json
@@ -5,9 +5,13 @@
   "description": "Hello‑world service behind nginx",
   "main": "index.js",
   "scripts": {
-    "start": "node index.mjs"
+    "start": "node index.mjs",
+    "dev": "nodemon index.mjs"
   },
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
