--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -25,11 +25,21 @@
     File   all.log
     Format plain
 
+# ✅ BEST PRACTICE: Filter logs at the source before sending them over the network.
+# This reduces network traffic and the load on the analyzer service.
+[FILTER]
+    Name    grep
+    Match   docker.*
+    # Only forward logs containing error-related keywords.
+    Regex   log (ERROR|CRIT|WARN)
+    # The new tag for filtered messages
+    Alias   docker.filtered
+
 # --- OUTPUT 2: Real-time analysis via HTTP ---
 # This block sends a copy of every log message to your analyzer service.
 [OUTPUT]
     Name          http
-    Match         *
+    Match         docker.filtered # ✅ Only send the filtered logs to the analyzer.
     # The hostname 'analyzer' is resolved by Docker's internal DNS
     Host          analyzer
     Port          9880
