--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -1,7 +1,12 @@
 [SERVICE]
     Flush        5
     Daemon       Off
-    Log_Level    info
+    Log_Level    debug
+    # ✅ BEST PRACTICE: Enable the monitoring endpoint for health checks.
+    HTTP_Server  On
+    HTTP_Listen  0.0.0.0
+    HTTP_Port    2020
+    Parsers_File parsers.conf
 
 [INPUT]
     Name              tail
@@ -16,8 +21,25 @@
     DB.Sync           Normal
     Docker_Mode       On
 
+# ✅ FIX: Add the JSON parser filter to un-nest the "log-in-log" format.
+# This is the critical step that makes the log content accessible to the grep filter,
+# preventing a startup crash from an unhandled log format.
+[FILTER]
+    Name         parser
+    Match        docker.*
+    Key_Name     log
+    Parser       docker_log_parser
+    Reserve_Data On
+
+[FILTER]
+    Name          rewrite_tag
+    Match         docker.*
+    Rule          log (?i)(ERROR|CRIT|WARN|FAIL|FATAL) docker.filtered true
+    Emitter_Name  re_emitter
+
 # --- OUTPUT 1: Archival to a file ---
 # This block writes every log message to a persistent file.
+# The `Match *` ensures it gets all logs, including the originals.
 [OUTPUT]
     Name   file
     Match  *
@@ -25,21 +47,18 @@
     File   all.log
     Format plain
 
-# ✅ BEST PRACTICE: Filter logs at the source before sending them over the network.
-# This reduces network traffic and the load on the analyzer service.
-[FILTER]
-    Name    grep
-    Match   docker.*
-    # Only forward logs containing error-related keywords.
-    Regex   log (ERROR|CRIT|WARN)
-    # The new tag for filtered messages
-    Alias   docker.filtered
+[OUTPUT]
+    Name   file
+    Match  docker.filtered
+    Path   /logs
+    File   filtered.log
+    Format plain
 
 # --- OUTPUT 2: Real-time analysis via HTTP ---
 # This block sends a copy of every log message to your analyzer service.
 [OUTPUT]
     Name          http
-    Match         docker.filtered # ✅ Only send the filtered logs to the analyzer.
+    Match         *
     # The hostname 'analyzer' is resolved by Docker's internal DNS
     Host          analyzer
     Port          9880
