Robolog architecture improvements

--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -1,7 +1,7 @@
 [SERVICE]
     Flush        5
     Daemon       Off
-    Log_Level    debug
+    Log_Level    info
     # ✅ BEST PRACTICE: Enable the monitoring endpoint for health checks.
     HTTP_Server  On
     HTTP_Listen  0.0.0.0
@@ -15,6 +15,10 @@
     Refresh_Interval  5
     Mem_Buf_Limit     64MB
     Skip_Long_Lines   On
+    # ✅ FIX: Start reading from the TAIL of existing log files, not the HEAD.
+    # When the log-cleaner removes the DB file, this prevents Fluent Bit
+    # from re-processing the entire log history of existing containers on startup.
+    Read_from_Head    Off
     # Use a database to remember the position in the log files.
     # This prevents re-reading the same logs if Fluent Bit restarts.
     DB                /logs/fluent-bit.db
@@ -58,7 +62,9 @@
 # This block sends a copy of every log message to your analyzer service.
 [OUTPUT]
     Name          http
-    Match         *
+    # ✅ FIX: Send only the re-tagged (filtered) logs to the analyzer.
+    # This is the primary filtering mechanism to reduce load on the analyzer service.
+    Match         docker.filtered
     # The hostname 'analyzer' is resolved by Docker's internal DNS
     Host          analyzer
     Port          9880
