--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,9 @@ services:
     container_name: log-cleaner
     volumes:
       - logs:/logs
-    # This command removes the archived log file and Fluent Bit's position database.
-    command: sh -c "echo 'Clearing persistent logs...' && rm -f /logs/all.log /logs/fluent-bit.db"
+    # This command removes archived log files and Fluent Bit's position database.
+    # ✅ FIX: Added filtered.log to the list of files to remove for a complete cleanup.
+    command: sh -c "echo 'Clearing persistent logs...' && rm -f /logs/all.log /logs/filtered.log /logs/fluent-bit.db"
 
   # 👉 Main application with Nginx, Node, PM2
   app:
