ignore errors from containers

--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -36,6 +36,15 @@
     Reserve_Data On
 
 [FILTER]
+    Name           grep
+    Match          docker.*
+    # ✅ FIX: Exclude logs from the ollama and analyzer containers themselves.
+    # This prevents the system from analyzing its own operational logs, which is
+    # inefficient and was causing a feedback loop.
+    Exclude        container_name ollama
+    Exclude        container_name analyzer
+
+[FILTER]
     Name          rewrite_tag
     Match         docker.*
     Rule          log (?i)(ERROR|CRIT|WARN|FAIL|FATAL) docker.filtered true
