--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,6 +9,7 @@ services:
     # We mount the host's cgroup to allow systemd to function correctly.
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - ./test/journal:/var/log/journal:rw
 # No entrypoint or command override is needed. The container will run its
 # default CMD ("/sbin/init"), which will in turn execute our test script
 # via /etc/rc.local. The test script will shut down the container upon completion.
