Remove hard coded "gemma" from UI text.
Change 'critical' in queue console.log to 'urgent' to avoid fluent bit picking it up.

--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -43,6 +43,10 @@
     # inefficient and was causing a feedback loop.
     Exclude        container_name ollama
     Exclude        container_name analyzer
+    Exclude        container_name /analyzer
+    Exclude        name analyzer
+    Exclude        name /analyzer
+    Exclude        image analyzer
 
 [FILTER]
     Name          rewrite_tag
